--- a/templates/indexPy.html
+++ b/templates/indexPy.html
@@ -33,7 +33,7 @@
 <body style="background-color: #145cb8;">
     <div class="toggle-button" style="text-align: right; padding-right: 20px; margin-top: 20px; ">
         <a href="/cpp" style="background-color: white; border-color: #ffd400; width: 50%; height: 50%; border-radius: 30px; font-size: 14px; margin-right: 15px; padding: 10px;">C++</a>
-        <a href="/python" style="background-color: white; border-color: #ffd400; width: 50%; height: 50%; border-radius: 30px; font-size: 14px; padding: 10px;">Python</a>
+        <a href="/" style="background-color: white; border-color: #ffd400; width: 50%; height: 50%; border-radius: 30px; font-size: 14px; padding: 10px;">Python</a>
     </div>
     
     <img src="/static/logoPy.png" width="15%" height="15%" alt="logoPy.png" style="margin-left: 45%;"/><br><br>
